--- a/src/net/willshouse/address/view/PersonOverview.fxml
+++ b/src/net/willshouse/address/view/PersonOverview.fxml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="300.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8">
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="300.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8"
+            fx:controller="net.willshouse.address.view.PersonOverviewController">
     <children>
         <SplitPane dividerPositions="0.29797979797979796" layoutX="150.0" layoutY="61.0" prefHeight="300.0"
                    prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
@@ -11,11 +11,12 @@
             <items>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                     <children>
-                        <TableView layoutY="26.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0"
-                                   AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <TableView fx:id="personTable" layoutY="26.0" prefHeight="200.0" prefWidth="200.0"
+                                   AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                                   AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                             <columns>
-                                <TableColumn prefWidth="75.0" text="First Name"/>
-                                <TableColumn prefWidth="75.0" text="Last Name"/>
+                                <TableColumn fx:id="firstNameColumn" prefWidth="75.0" text="First Name"/>
+                                <TableColumn fx:id="lastNameColumn" prefWidth="75.0" text="Last Name"/>
                             </columns>
                         </TableView>
                     </children>
@@ -40,17 +41,20 @@
                             </rowConstraints>
                             <children>
                                 <Label text="First Name"/>
-                                <Label text="Label" GridPane.columnIndex="1"/>
+                                <Label fx:id="firstNameLabel" text="Label" GridPane.columnIndex="1"/>
                                 <Label text="Last Name" GridPane.rowIndex="1"/>
                                 <Label text="Street" GridPane.rowIndex="2"/>
                                 <Label text="City" GridPane.rowIndex="3"/>
                                 <Label text="Postal Code" GridPane.rowIndex="4"/>
                                 <Label text="Birthday" GridPane.rowIndex="5"/>
-                                <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-                                <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
-                                <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
-                                <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
-                                <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="5"/>
+                                <Label fx:id="lastNameLabel" text="Label" GridPane.columnIndex="1"
+                                       GridPane.rowIndex="1"/>
+                                <Label fx:id="streetLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+                                <Label fx:id="cityLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
+                                <Label fx:id="postalCodeLabel" text="Label" GridPane.columnIndex="1"
+                                       GridPane.rowIndex="4"/>
+                                <Label fx:id="birthdayLabel" text="Label" GridPane.columnIndex="1"
+                                       GridPane.rowIndex="5"/>
                             </children>
                         </GridPane>
                         <HBox layoutX="253.0" layoutY="272.0" spacing="5.0" AnchorPane.bottomAnchor="10.0"
