--- a/src/net/willshouse/address/view/PersonOverview.fxml
+++ b/src/net/willshouse/address/view/PersonOverview.fxml
@@ -60,9 +60,12 @@
                         <HBox layoutX="253.0" layoutY="272.0" spacing="5.0" AnchorPane.bottomAnchor="10.0"
                               AnchorPane.rightAnchor="10.0">
                             <children>
-                                <Button layoutX="253.0" layoutY="272.0" mnemonicParsing="false" text="New..."/>
-                                <Button layoutX="312.0" layoutY="272.0" mnemonicParsing="false" text="Edit..."/>
-                                <Button layoutX="364.0" layoutY="272.0" mnemonicParsing="false" text="Delete"/>
+                                <Button layoutX="253.0" layoutY="272.0" mnemonicParsing="false"
+                                        onAction="#handleNewPerson" text="New..."/>
+                                <Button layoutX="312.0" layoutY="272.0" mnemonicParsing="false"
+                                        onAction="#handleEditPerson" text="Edit..."/>
+                                <Button layoutX="364.0" layoutY="272.0" mnemonicParsing="false"
+                                        onAction="#handleDeletePerson" text="Delete"/>
                             </children>
                         </HBox>
                     </children>
