--- a/src/net/willshouse/address/view/RootLayout.fxml
+++ b/src/net/willshouse/address/view/RootLayout.fxml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.BorderPane?>
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8">
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="400.0" prefWidth="600.0" stylesheets="@DarkTheme.css"
+            xmlns="http://javafx.com/javafx/8">
     <top>
         <MenuBar BorderPane.alignment="CENTER">
             <menus>
